# machine_learning

./: Customer_Churn_Prediction.ipynb  Linear_Regression_numpy.ipynb  Prediction_of_Wine_type_using_Deep_Learning.ipynb  README.md
mlflow-scikit/: MLproject  Makefile  README.md  main.py  mlflow.db  pyproject.toml
mlflow-scikit/mlflow_scikit/: base.py  metrics.py  preprocces.py  utils.py
mlflow-scikit/mlruns/0/: meta.yaml
mlflow-scikit/mlruns/0/1c0c1ba666484cbab9816764d0090542/: meta.yaml
mlflow-scikit/mlruns/0/24999d48247f44dabc2f60700ba02572/: meta.yaml
mlflow-scikit/mlruns/0/2b9b5a5f9beb4d35946e99692c690d25/: meta.yaml
mlflow-scikit/mlruns/0/2beb1e2d33b94ca0abd3eaf13a32c67a/: meta.yaml
mlflow-scikit/mlruns/0/2c980b43a7ef4729971500c2db8cc783/: meta.yaml
mlflow-scikit/mlruns/0/34fc718d5c8f41fc9c442e334debd3da/: meta.yaml
mlflow-scikit/mlruns/0/3d2793eb41314bc69ede0ea2abf0f560/: meta.yaml
mlflow-scikit/mlruns/0/4baac6837899411683485e82f6d0b702/: meta.yaml
mlflow-scikit/mlruns/0/5bbe59c296cb478a8520932eab462fd2/: meta.yaml
mlflow-scikit/mlruns/0/80eafd6a16a74fa3bbe19ff45e938e09/: meta.yaml
mlflow-scikit/mlruns/0/93af657709b84323a1cb93e66cf4968c/: meta.yaml
mlflow-scikit/mlruns/0/953bf440ace34ec6b24bde818e9b14b5/: meta.yaml
mlflow-scikit/mlruns/0/95e82317166f472e8dfce38ac59592b6/: meta.yaml
mlflow-scikit/mlruns/0/a92626be6bba4ce49b20b233c6bdbaf0/: meta.yaml
mlflow-scikit/mlruns/0/f6cf0f70619447bda234f8b6d657b814/: meta.yaml
mlflow-scikit/mlruns/682921017019269663/: meta.yaml
mlflow-scikit/mlruns/756162609820288597/: meta.yaml
(+57 files in other folders)
